chore: update netlify.toml with dev ports

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^7.1.1",
     "netlify-lambda": "^2.0.16",
     "passport": "^0.6.0",
