--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
     functions = "functions"
 
+[dev]
+    port = 8888
+    
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
   for = "/*"
